# sglang

python/sglang/: utils.py
python/sglang/multimodal_gen/: registry.py
python/sglang/multimodal_gen/configs/models/dits/: __init__.py  hunyuan_image.py
python/sglang/multimodal_gen/configs/models/vaes/: __init__.py  hunyuan_image.py
python/sglang/multimodal_gen/configs/pipeline_configs/: __init__.py  hunyuan_image.py  sensenova_u1.py  u1.py  ug.py
python/sglang/multimodal_gen/configs/sample/: __init__.py  hunyuan_image.py  sensenova_u1.py  u1.py  ug.py
python/sglang/multimodal_gen/runtime/: server_args.py
python/sglang/multimodal_gen/runtime/entrypoints/: diffusion_generator.py  http_server.py  utils.py
python/sglang/multimodal_gen/runtime/managers/: gpu_worker.py  scheduler.py
python/sglang/multimodal_gen/runtime/models/: sensenova_u1_pixel_flow.py
python/sglang/multimodal_gen/runtime/models/bridges/: sensenova_u1.py
python/sglang/multimodal_gen/runtime/pipelines/: hunyuan_image.py  sensenova_u1.py  ug.py
python/sglang/multimodal_gen/runtime/pipelines_core/model_specific/: sensenova_u1.py
python/sglang/multimodal_gen/runtime/pipelines_core/stages/: __init__.py  context_conditioned_generation.py  sensenova_u1.py  ug.py
python/sglang/multimodal_gen/runtime/pipelines_core/stages/model_specific_stages/: sensenova_u1.py  sensenova_u1_context.py  sensenova_u1_decode.py  sensenova_u1_denoise.py  sensenova_u1_executor.py  sensenova_u1_prepare.py  sensenova_u1_types.py  sensenova_u1_utils.py  ug_bagel.py  ug_u1.py
python/sglang/multimodal_gen/test/unit/: test_ug_bagel_qwen2_mot.py  test_ug_config.py  test_ug_session_runtime.py  test_ug_srt_bridge.py  test_ug_u1_backend.py  test_ug_u1_parity.py
python/sglang/srt/configs/: __init__.py  neo_chat.py
python/sglang/srt/layers/attention/: flashinfer_backend.py  flashmla_backend.py  torch_native_backend.py  triton_backend.py
python/sglang/srt/layers/moe/ep_moe/: layer.py
python/sglang/srt/layers/moe/fused_moe_triton/: fused_moe.py  layer.py
python/sglang/srt/layers/quantization/configs/: N=24576,K=7168,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=3072,K=1536,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=3072,K=7168,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=32768,K=512,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=4096,K=512,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=4608,K=7168,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=512,K=7168,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=576,K=7168,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=7168,K=16384,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=7168,K=18432,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=7168,K=2048,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=7168,K=2304,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json  N=7168,K=256,device_name=NVIDIA_H20,dtype=fp8_w8a8,block_shape=[128, 128].json
python/sglang/srt/managers/: schedule_batch.py  schedule_policy.py  scheduler.py
python/sglang/srt/model_executor/: forward_batch_info.py  model_runner.py
python/sglang/srt/models/: neo_chat.py  neo_chat_ug.py  qwen3.py  sensenova_u1.py
python/sglang/srt/ug/: adapter.py  bagel.py  context.py  coordinator.py  denoiser.py  interleaved.py  middle.py  protocol.py  runtime.py  sensenova_u1.py  srt_executor.py  srt_server.py  u1.py
python/sglang/srt/utils/hf_transformers/: common.py
python/sglang/test/ug/: test_ug_coordinator.py  test_ug_import_boundaries.py  test_ug_protocol.py
sgl-kernel/: CMakeLists.txt  setup.py
test/registered/scheduler/: test_u1_official_parity_harness.py  test_u1_standalone_entrypoint_smoke.py
